Fix overflow

--- a/static/css/index.css
+++ b/static/css/index.css
@@ -10,10 +10,8 @@
     background-image: url('/static/img/home-bkg.png');
     background-repeat: none;
     background-size:cover;
-    padding:3vh;
+    padding:3vh 0;
 }
-
-
 
 .header-content{
     margin-left: 5%;
@@ -28,9 +26,13 @@
     }
 }
 
+@media (max-width: 420px){
+    .header img{
+        transform: scale(2);
+    }
+}
 
 .header-content h1{
-    width:90%;
     color:white;
     font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
     font-size: 10vh;
@@ -61,11 +63,11 @@ button{
 .wave {
     position: absolute;
     bottom: -4px;
-    right: -4px;
-    width: 110%;
+    width: 100%;
     overflow: hidden;
     line-height: 0;
     transform: rotate(180deg);
+    z-index: -1;
 }
 
 .wave svg {
@@ -78,7 +80,6 @@ button{
 .wave .shape-fill {
     fill: white;
 }
-
 
 .description{
     display:flex;
@@ -93,10 +94,9 @@ button{
 
 .text{
     text-align: center;
-    margin-left: 5%;
     font-size: 2rem;
     font-family: 'Zilla Slab',serif;
-    padding:5vw;
+    padding:5vw 0;
 }
 
 .textTwo{
@@ -120,14 +120,8 @@ h2{
     font-family: 'Zilla Slab',serif;
 }
 
-/* .row{
-display:flex;
-flex-direction:row ;
-} */
-
 .problem{
-    /* display: flex; */
-    
+    display: flex;
     background-color: #8DA97A;
     flex-direction: column;
     padding:5vw; 
@@ -142,6 +136,7 @@ flex-direction:row ;
 .rounded{
     border-top: 8px solid ;
     border-radius: 5px; 
+    width: 90%;
 }
 
 .center{
